# cuda

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  MakefileBoada  README.md  build.sh  compile_commands.json  configure  job.sh  makeBoada.sh  makeLocal.sh  makeVideo.sh  run.sh  runBoada.sh  runGL.sh  runLocal.sh  runVideo.sh  runVideoBoada.sh
assets/: Aluminium Notebook body by Amleto.mat  Audi A7 Sportback - OBJ.mtl  Black Plastic.mat  Chrome.mat  Rims.mat  Rubber.mat  filter.vs  gauss.fs  hdr.fs  pbr.fs  pbr.vs
backends/: Makefile  backend.h  clean.sh  flags.sh  gl.c  loader.cpp  make.sh  mesh.h  util.h
ext/: sceneEncode.c
ext/hve/: hve.h
include/: bufferObject.h  cutil.h  objects.h  scene.h  texture.h
include/util/: buffer.h  linear.h
lib/stb/: CMakeLists.txt
scripts/: runFrame.c  runFrameGL.c  runFrameHQ.c  runFrameLQ.c  runFrames.c  runVideo.c  runVideoLQ.c  scripts.hpp  test1.c  test2.c  test3.c  test4.c  testMesh.cpp  testObj.c  testSphere.c  test_sdf.cu
src/: bufferObject.c  bufferObject.h  main.c  main.cu  objects.c  objects.h  scene.c  scene.h  texture.c  texture.h  trace.h  tracing.cu  tracing.h
src/cuda/: cutil_math.h
src/examples/: defaultExample.c  examples.h  test2.c
src/util/: buffer.c  buffer.h  debug.h  linear.h
src_bin/: main.c
